--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
     <EditText
-        android:id="@+id/email_in"
+        android:id="@+id/edittext_main_email"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:hint="@string/email"
@@ -29,12 +29,13 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text=" @e-mirim.hs.kr "
-        android:textSize="15dp"
-        android:layout_gravity="right"/>
+        android:textSize="15sp"
+        android:layout_gravity="center_vertical"/>
+
     </LinearLayout>
 
     <EditText
-        android:id="@+id/password_in"
+        android:id="@+id/edittext_main_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
@@ -46,22 +47,15 @@
         android:singleLine="true"
         android:layout_marginBottom="10dp"/>
 
-    <CheckBox
-        android:id="@+id/ck_auto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:text="@string/ck_auto"
-        android:layout_marginBottom="10dp"/>
-
     <TextView
         android:id="@+id/because_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ff0000"
         android:layout_gravity="left"/>
+
     <Button
-        android:id="@+id/btn_in"
+        android:id="@+id/button_main_login"
         style="?android:textAppearanceSmall"
         android:layout_width="200dp"
         android:layout_gravity="center"
@@ -74,15 +68,13 @@
         />
 
     <TextView
-        android:id="@+id/text_in"
+        android:id="@+id/textview_main_signup"
         style="?android:textAppearanceSmall"
-        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/text_signup1"
         android:textStyle="bold"
         />
-
 
 </LinearLayout>
