--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,13 +21,13 @@
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:singleLine="true"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:layout_marginBottom="10dp"/>
 
     <TextView
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text=" @e-mirim.hs.kr "
+        android:text=" @ e-mirim.hs.kr "
         android:textSize="15sp"
         android:layout_gravity="center_vertical"/>
 
@@ -46,13 +45,6 @@
         android:maxLines="1"
         android:singleLine="true"
         android:layout_marginBottom="10dp"/>
-
-    <TextView
-        android:id="@+id/because_in"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#ff0000"
-        android:layout_gravity="left"/>
 
     <Button
         android:id="@+id/button_main_login"
