RecyclerView 학교 게시판 추가, 편집, 삭제까지. +) 패키지명 확인 요함. /상세보기·댓글 - 나머지 3개 게시판

--- a/app/src/main/res/layout/activity_m5_1.xml
+++ b/app/src/main/res/layout/activity_m5_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dahyeon.mirim.activities.M51Activity">
+    tools:context="com.mirimapp.mirim.activities.M51Activity">
 
     <ImageButton
         android:layout_width="70sp"
