--- a/app/src/main/res/layout/activity_menu5_mypage.xml
+++ b/app/src/main/res/layout/activity_menu5_mypage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dahyeon.mirim.activities.Menu5MypageActivity">
+    tools:context="com.mirimapp.mirim.activities.Menu5MypageActivity">
 
     <ImageButton
         android:layout_width="70sp"
