--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:gravity="center"
-    tools:context="com.dahyeon.mirim.activities.LoginActivity">
+    tools:context="com.mirimapp.mirim.activities.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
