--- a/app/src/main/res/layout/activity_m2_1.xml
+++ b/app/src/main/res/layout/activity_m2_1.xml
@@ -4,6 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dahyeon.mirim.activities.M21Activity">
+    tools:context="com.mirimapp.mirim.activities.M21Activity">
+
+        <ImageButton
+            android:layout_width="70sp"
+            android:layout_height="50sp"
+            android:padding="5pt"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:scaleType="centerInside"
+            android:src="@drawable/menu"
+            android:background="@android:color/transparent"
+            android:id="@+id/menu"
+            />
+
+        <android.support.v4.widget.DrawerLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/menu"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/drawer">
+
+            <include
+                layout="@layout/activity_drawer" />
+
+            <android.support.constraint.ConstraintLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview_m21_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintVertical_weight="9"
+                    android:scrollbarFadeDuration="0"
+                    android:scrollbarSize="5dp"
+                    android:scrollbarThumbVertical="@android:color/darker_gray"
+                    android:scrollbars="vertical"
+                    app:layout_constraintBottom_toTopOf="@+id/button_m21_insert"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <Button
+                    android:id="@+id/button_m21_insert"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:text="게시글 쓰기"
+                    app:layout_constraintVertical_weight="1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recyclerview_m21_list" />
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v4.widget.DrawerLayout>
 
 </android.support.constraint.ConstraintLayout>
