--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.dahyeon.mirim.activities.MainActivity"
+    tools:context="com.mirimapp.mirim.activities.MainActivity"
     android:background="#FF09500F">
 
     <LinearLayout
