--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,14 +8,14 @@
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:gravity="center"
-    tools:context="com.mirimapp.mirim.activities.LoginActivity">
+    tools:context="com.mirimapp.mirim.activities.SigninActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
-            android:id="@+id/email_up"
+            android:id="@+id/edittext_signup_email"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:hint="@string/email"
@@ -34,9 +34,8 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/text_email"
+        android:id="@+id/textview_signup_send_certify_mail"
         style="?android:textAppearanceSmall"
-        android:clickable="true"
         android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +47,7 @@
         />
 
     <EditText
-        android:id="@+id/password_up"
+        android:id="@+id/edittext_signup_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
@@ -58,7 +57,7 @@
         android:layout_marginBottom="10dp"/>
 
     <EditText
-        android:id="@+id/passwordck_up"
+        android:id="@+id/edittext_signup_password_check"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/passwordck"
@@ -71,14 +70,14 @@
         android:layout_marginBottom="10dp"/>
 
     <TextView
-        android:id="@+id/because_up"
+        android:id="@+id/textview_signup_invalid_reason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ff0000"
         android:layout_gravity="left"/>
 
     <Button
-        android:id="@+id/btn_up"
+        android:id="@+id/button_signup_confirm"
         style="?android:textAppearanceSmall"
         android:layout_width="200dp"
         android:layout_gravity="center"
@@ -91,9 +90,8 @@
         />
 
     <TextView
-        android:id="@+id/text_up"
+        android:id="@+id/textview_signup_go_to_signin"
         style="?android:textAppearanceSmall"
-        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
