--- a/app/src/main/res/layout/activity_m2_1.xml
+++ b/app/src/main/res/layout/activity_m2_1.xml
@@ -27,8 +27,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/drawer">
 
-            <include
-                layout="@layout/activity_drawer" />
 
             <android.support.constraint.ConstraintLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -55,11 +53,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:text="게시글 쓰기"
+                    android:backgroundTint="#098015"
+                    android:textColor="#ffffff"
                     app:layout_constraintVertical_weight="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recyclerview_m21_list" />
             </android.support.constraint.ConstraintLayout>
 
+            <include
+                layout="@layout/activity_drawer" />
         </android.support.v4.widget.DrawerLayout>
 
 </android.support.constraint.ConstraintLayout>
