--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_out"
+        android:id="@+id/button_main_logout"
         style="?android:textAppearanceSmall"
         android:layout_width="200dp"
         android:layout_gravity="center"
