--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/main_bg"
         >
         <ImageButton
-            android:id="@+id/menu_btn1"
+            android:id="@+id/imagebutton_main_to_school_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -30,7 +30,7 @@
         android:layout_weight="1"
         android:background="@drawable/main_bg">
         <ImageButton
-            android:id="@+id/menu_btn2"
+            android:id="@+id/imagebutton_main_to_dormitory_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -44,7 +44,7 @@
         android:layout_weight="1"
         android:background="@drawable/main_bg">
         <ImageButton
-            android:id="@+id/menu_btn3"
+            android:id="@+id/imagebutton_main_to_board_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -58,7 +58,7 @@
         android:layout_weight="1"
         android:background="@drawable/main_bg">
         <ImageButton
-            android:id="@+id/menu_btn4"
+            android:id="@+id/imagebutton_main_to_market_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -72,7 +72,7 @@
         android:layout_weight="1"
         android:background="@drawable/main_bg">
         <ImageButton
-            android:id="@+id/menu_btn5"
+            android:id="@+id/imagebutton_main_to_mypage_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
