--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -53,27 +53,10 @@
         android:background="@drawable/shape"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="1px"
-        >
-        <Button
-            android:id="@+id/menu1"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:background="#ffffff"
-            android:text="@string/title_1"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/shape"
-        android:gravity="center"
-        android:orientation="vertical"
         android:padding="1px">
 
         <Button
-            android:id="@+id/menu2"
+            android:id="@+id/button_drawer_to_dormitory_activity"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="match_parent"
@@ -90,7 +73,7 @@
         >
 
         <Button
-            android:id="@+id/menu3"
+            android:id="@+id/button_drawer_to_board_activity"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="match_parent"
@@ -108,7 +91,7 @@
         >
 
         <Button
-            android:id="@+id/menu4"
+            android:id="@+id/button_drawer_to_market_activity"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="match_parent"
@@ -126,7 +109,7 @@
         >
 
         <Button
-            android:id="@+id/menu5"
+            android:id="@+id/button_drawer_to_mypage_activity"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="match_parent"
