--- a/app/src/main/res/layout/edit_box.xml
+++ b/app/src/main/res/layout/edit_box.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/edittext_dialog_name"
+        android:id="@+id/edittext_dialog_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -27,12 +27,12 @@
         android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_dialog_name"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_dialog_title"
         android:maxLines="1"
         android:singleLine="true"/>
 
     <EditText
-        android:id="@+id/edittext_dialog_sub_content"
+        android:id="@+id/edittext_dialog_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -49,11 +49,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="수정"
+        android:text="확인"
         android:backgroundTint="#098015"
         android:textColor="#ffffff"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_dialog_sub_content"/>
+        app:layout_constraintTop_toBottomOf="@+id/edittext_dialog_content"/>
 
 </android.support.constraint.ConstraintLayout>
